Changed background color

--- a/web/actual_forecast.html
+++ b/web/actual_forecast.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="background-color:#c44d47">
+<body style="background-color:#893531">
 	<main style="margin-top: 20px;">
 
 		<h4 id="animated_section" 
