Added github link

--- a/web/startpage.html
+++ b/web/startpage.html
@@ -149,8 +149,9 @@
 		</script>
 
 	</main>
-	<footer style="text-align: right">
-		<p><a href="https://michalkukla.xyz/" style="color: beige">Author</a></p>
+	<footer >
+		<p style="float:left"> <a href="https://github.com/Solamil/merlot"><img src="./pics/git-icon.svg"></a></p>
+		<p style="float: right"><a href="https://michalkukla.xyz/" style="color: beige">Author</a></p>
 	</footer>
 </body>
 </html>
