--- a/web/clouds.html
+++ b/web/clouds.html
@@ -13,15 +13,14 @@ a{color: beige}
 <body style="background-color:#bb8210">
 	<main style="margin-top: 20px;">
 
-		<h4 id="clouds_section" style="color: beige"><a href="./startpage.html">🛖</a> Sun and clouds</h4>
+		<h4 id="clouds_section" style="color: beige"><a href="./index.html">🛖</a> Sun and clouds</h4>
 		<a href='https://api.sat24.com/animated/DE/visual/2/Central%20Europe%20Standard%20Time/4453629' target='sat24'><image src='https://api.sat24.com/animated/DE/visual/2/Central%20Europe%20Standard%20Time/4453629' width=600 height=437 loading=lazy></a>
 
 	</main>
 
 	<nav id="nav" style="margin-top: 200px; color: beige">
 		<ul style=" list-style:none; text-align:left">
-			<li><a href="./startpage.html">🛖</a></li>
-			<li><a href="./startpage.html#pic_section">🖼️</a></li>
+			<li><a href="./index.html">🛖</a></li>
 			<li><a href="./actual_forecast.html">🌧️</a></li>
 			<li><a href="./clouds.html">☀️/☁️</a></li>
 			<li><a href="./forecast.html">🌧️📅</a></li>
