--- a/web/forecast.html
+++ b/web/forecast.html
@@ -17,7 +17,7 @@
 	<main style="margin-top: 20px;">
 		
 
-		<h4 id="forecast_section"><a href="./startpage.html">🛖</a> Forecast</h4>
+		<h4 id="forecast_section"><a href="./index.html">🛖</a> Forecast</h4>
 
 		<input type="date" id="calendar"/>
 
@@ -115,8 +115,7 @@
 
 	<nav id="nav" style="margin-top: 200px; color: beige">
 		<ul>
-			<li><a href="./startpage.html">🛖</a></li>
-			<li><a href="./startpage.html#pic_section">🖼️</a></li>
+			<li><a href="./index.html">🛖</a></li>
 			<li><a href="./actual_forecast.html">🌧️</a></li>
 			<li><a href="./clouds.html">☀️/☁️</a></li>
 			<li><a href="./forecast.html">🌧️📅</a></li>
