--- a/web/forecast_wttr.html
+++ b/web/forecast_wttr.html
@@ -21,8 +21,7 @@
 
 	<nav id="nav" style="margin-top: 200px; color: beige">
 		<ul>
-			<li><a href="./startpage.html">🛖</a></li>
-			<li><a href="./startpage.html#pic_section">🖼️</a></li>
+			<li><a href="./index.html">🛖</a></li>
 			<li><a href="./actual_forecast.html">🌧️</a></li>
 			<li><a href="./clouds.html">☀️/☁️</a></li>
 			<li><a href="./forecast.html">🌧️📅</a></li>
