--- a/web/index.html
+++ b/web/index.html
@@ -87,20 +87,20 @@
 			}
 			fetch("/base_info", options).then(res => res.json())
 				.then(res => {
-				resList = res.sun_moon.info.split(" ")
+				resList = res.weather.sun_moon.split(" ")
 				var sun_moon = document.getElementById("sun_moon")	
 				sun_moon.innerHTML = "🌅 "+resList[0]+"  🌇"+resList[1]+"  "+resList[2]+
-						     "  "+res.hum_low_high.days[0]
+						     "  "+res.weather.hum_low_high[0]
 				const date = new Date(Date.now())
 				date.setDate(date.getDate()+1)
 				var tomorrow_forecast = document.getElementById("tomorrow_forecast")
 				date_output = new Intl.DateTimeFormat('en-US', {weekday: "long", day:"numeric", month:"long"}).format(date)
-				tomorrow_forecast.innerHTML = date_output+": "+res.hum_low_high.days[1]
+				tomorrow_forecast.innerHTML = date_output+": "+res.weather.hum_low_high[1]
 
 				var next_forecast = document.getElementById("next_forecast")
 				date.setDate(date.getDate()+1)
 				date_output = new Intl.DateTimeFormat('en-US', {weekday: "long", day:"numeric", month:"long"}).format(date)
-				next_forecast.innerHTML = date_output+": "+res.hum_low_high.days[2]
+				next_forecast.innerHTML = date_output+": "+res.weather.hum_low_high[2]
 
 //
 //				COINS
