Changed default link from picture to gif

--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@
 		</div>
 		<!-- https://api.sat24.com/crop?type=rainTMC&lat=50.2334&lon=14.7313&width=600&height=437&zoom=1.00&continent=eu-->
 		<!-- https://api.sat24.com/crop?type=rainTMC&lat=50.2334&lon=14.7313&width=360&height=227&zoom=1.00&continent=eu-->
-		<a href='https://api.sat24.com/mostrecent/DE/rainTMC' target='sat24' id="link_sat24"><image src='https://api.sat24.com/mostrecent/DE/rainTMC' id="img_sat24" width=360 height=227 loading=lazy></a>
+		<a href='https://api.sat24.com/animated/DE/rainTMC/2/Central%20Europe%20Standard%20Time/3107721' target='sat24' id="link_sat24"><image src='https://api.sat24.com/mostrecent/DE/rainTMC' id="img_sat24" width=360 height=227 loading=lazy></a>
 		<br>
 		<details style="margin-top: 30px">
 			<summary>⚙️/🔧</summary>
