footer notes smaller font size

--- a/web/index.html
+++ b/web/index.html
@@ -249,8 +249,8 @@
 	</main>
 	<footer >
 		<p style="float:left"> <a href="https://github.com/Solamil/merlot"><img src="./pics/git-icon.svg"></a></p>
-		<p id="donateLink" style="float: right"><a href="https://donate.michalkukla.xyz/" style="color: beige; text-decoration: none">💸</a></p>
-		<p style="float: right"><a href="https://michalkukla.xyz/" style="color: beige; text-decoration: none">Author</a></p>
+		<p id="donateLink" style="float: right"><a href="https://donate.michalkukla.xyz/" style="font-size: x-small; color: beige; text-decoration: none">💸</a></p>
+		<p style="float: right"><a href="https://michalkukla.xyz/" style="font-size: x-small; color: beige; text-decoration: none">Author</a></p>
 		<p style="font-size: x-small">Personal Home Page</p>
 	</footer>
 </body>
