--- a/web/index.html
+++ b/web/index.html
@@ -60,9 +60,9 @@
 		<!-- https://api.sat24.com/crop?type=rainTMC&lat=50.2334&lon=14.7313&width=600&height=437&zoom=1.00&continent=eu-->
 		<!-- https://api.sat24.com/crop?type=rainTMC&lat=50.2334&lon=14.7313&width=360&height=227&zoom=1.00&continent=eu-->
 		<!-- rain -->
-		<a href='https://api.sat24.com/animated/DE/rainTMC/3/Central%20Europe%20Standard%20Time/5603172' target='sat24' id="link_sat24"><image src='https://api.sat24.com/mostrecent/DE/rainTMC' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
+		<a href='./pics/rain.gif' target='sat24' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
 		<!-- sun and clouds -->
-		<a href='https://api.sat24.com/animated/DE/visual/3/Central%20Europe%20Standard%20Time/530005' target='sat24'><img src='https://api.sat24.com/mostrecent/DE/visual5hdcomplete' width=360 height=227 style="margin: 5px"></a>
+		<a href='./pics/clouds.gif' target='sat24'><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
 
 		<br>
 		<details style="margin-top: 30px">
