index.html: Add name of project into the footer

--- a/web/index.html
+++ b/web/index.html
@@ -259,6 +259,7 @@
 		<p id="emailLink" style="float: right"><a href="mailto:michal@michalkukla.xyz" style="font-size: small; color:beige; text-decoration: none">📧</a></p>
 		<p style="float: right"><a href="https://michalkukla.xyz/" style="font-size: x-small; color: beige; text-decoration: none">Author</a></p>
 		<p style="font-size: x-small">Personal Home Page</p>
+		<p style="font-size: x-small">🌳Marlen</p>
 	</footer>
 </body>
 </html>
