--- a/web/index.html
+++ b/web/index.html
@@ -136,7 +136,7 @@
 			var prefix = formatSelect.value.split("-")[0]
 			weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
 			var wttrLink = document.getElementById("wttr-link")
-			wttrLink.href = "https://wttr.in/?lang="+prefix
+			wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
 			weatherInput.placeholder = weatherInputDict[prefix]
 
 			document.getElementById("save_btn").onclick = function () {
@@ -150,6 +150,11 @@
 					var formatSelect = document.getElementById("select_lang")
 					var prefix = formatSelect.value.split("-")[0]
 					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
+
+					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
+					var wttrLink = document.getElementById("wttr-link")
+					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+					weatherInput.placeholder = weatherInputDict[prefix]
 				}
 				
 			}
