Served files by http server

--- a/web/index.html
+++ b/web/index.html
@@ -263,7 +263,7 @@
 
 	</main>
 	<footer >
-		<p style="float:left"> <a href="https://github.com/Solamil/marlen"><img src="./pics/git-icon.svg"></a></p>
+		<p style="float:left"> <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a></p>
 		<p id="donateLink" style="float: right"><a href="https://donate.michalkukla.xyz/" style="font-size: small; color: beige; text-decoration: none">💸</a></p>
 		<p id="emailLink" style="float: right"><a href="mailto:michal@michalkukla.xyz" style="font-size: small; color:beige; text-decoration: none">📧</a></p>
 		<p style="float: right"><a href="https://michalkukla.xyz/" style="font-size: x-small; color: beige; text-decoration: none">Author</a></p>
