--- a/web/index.html
+++ b/web/index.html
@@ -109,10 +109,10 @@
 				if (cookiePlace != undefined) {
 					place = cookiePlace.split("=")[1]
 					var inputLocation = document.getElementById("location_input")
-					inputLocation.value = place
+					inputLocation.value = decodeURI(place)
 
 				} else {
-					document.cookie = "place="+place+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure" 
+					document.cookie = "place="+encodeURI(place)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure" 
 				}
 
 				var cookieLang = cookieList.find(e => e.startsWith("lang"))
@@ -145,7 +145,7 @@
 				var inputLocation = document.getElementById("location_input")	
 				if (inputLocation.value != ""){
 					place = encodeURIComponent(inputLocation.value)
-					document.cookie = "place="+inputLocation.value+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
+					document.cookie = "place="+encodeURI(inputLocation.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
 					var weatherImg = document.getElementById("weather-img")
 					var formatSelect = document.getElementById("select_lang")
 					var prefix = formatSelect.value.split("-")[0]
@@ -158,7 +158,16 @@
 				}
 				
 			}
-//
+			var formatSelect = document.getElementById("select_lang")
+			var tomorrow_forecast = document.getElementById("tomorrow_forecast")
+			date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(date)
+			tomorrow_forecast.innerHTML = date_output+": "+tomorrow_forecast.innerHTML
+
+			var next_forecast = document.getElementById("next_forecast")
+			date.setDate(date.getDate()+1)
+			date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(date)
+			next_forecast.innerHTML = date_output+": "+next_forecast.innerHTML
+
 //			base init
 //
 //			const options = {
