--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,21 @@
 <body style="background-color:#893531 ">
 	<div class="status-bar">
 
-		<p id="location" style="display: inline-block; margin-bottom: 0px">🏠 {{.Location}}</p>
+<!--		<p id="location" style="display: inline-block; margin-bottom: 0px">🏠 {{.Location}}</p> -->
+		<form action="/" method="GET" class="form" id="location_form"
+			style="display: inline-block; margin-left: 5px; margin-bottom: 0px">
+			<select name="lang" id="select_lang">
+				<option value="en-US" default>🇺🇸</option>
+				<option value="de-DE">🇩🇪</option>
+				<option value="cs-CZ">🇨🇿</option>
+			</select>
+		<span>🏠</span>
+		<input type="text" name="location" id="location_input" value="{{.Location}}" 
+			autocomplete=off
+			style="border: none; background:transparent; color:beige">
+		</form>	
 		<a id="coins" href="https://rate.sx/" target="_blank" style="float: right; display: inline-block; margin: 10px; text-decoration: none; color: beige">{{.Coins}}</a>
-		<!--		<p id="coins" style="float: right; display: inline-block;">Currency</p> -->
+
 		<select name="fiat_select" id="fiat_select" style="float: right; display: inline-block;">
 			<option value="usd">$</option>
 			<option value="eur">€</option>
@@ -65,21 +77,6 @@
 		<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
 		<!-- sun and clouds -->
 		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
-
-		<br>
-		<details style="margin-top: 30px">
-			<summary>⚙️/🔧</summary>
-			<br>
-			<input id="location_input" type="text" >
-
-			<select name="lang" id="select_lang">
-				<option value="en-US" default>🇺🇸</option>
-				<option value="de-DE">🇩🇪</option>
-				<option value="cs-CZ">🇨🇿</option>
-			</select>
-
-			<button id="save_btn" type="button">Save</button>
-		</details>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
@@ -139,25 +136,25 @@
 			wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
 			weatherInput.placeholder = weatherInputDict[prefix]
 
-			document.getElementById("save_btn").onclick = function () {
-				var date = new Date(Date.now())
-				date.setFullYear(date.getFullYear()+1)
-				var inputLocation = document.getElementById("location_input")	
-				if (inputLocation.value != ""){
-					place = encodeURIComponent(inputLocation.value)
-					document.cookie = "place="+encodeURI(inputLocation.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
-					var weatherImg = document.getElementById("weather-img")
-					var formatSelect = document.getElementById("select_lang")
-					var prefix = formatSelect.value.split("-")[0]
-					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
-
-					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
-					var wttrLink = document.getElementById("wttr-link")
-					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
-					weatherInput.placeholder = weatherInputDict[prefix]
-				}
-				
-			}
+//			document.getElementById("save_btn").onclick = function () {
+//				var date = new Date(Date.now())
+//				date.setFullYear(date.getFullYear()+1)
+//				var inputLocation = document.getElementById("location_input")	
+//				if (inputLocation.value != ""){
+//					place = encodeURIComponent(inputLocation.value)
+//					document.cookie = "place="+encodeURI(inputLocation.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
+//					var weatherImg = document.getElementById("weather-img")
+//					var formatSelect = document.getElementById("select_lang")
+//					var prefix = formatSelect.value.split("-")[0]
+//					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
+//
+//					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
+//					var wttrLink = document.getElementById("wttr-link")
+//					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+//					weatherInput.placeholder = weatherInputDict[prefix]
+//				}
+//				
+//			}
 			var formatSelect = document.getElementById("select_lang")
 			var dayForecast = new Date(Date.now()) 
 			dayForecast.setDate(dayForecast.getDate()+1)
