--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 <!--		<p id="location" style="display: inline-block; margin-bottom: 0px">🏠 {{.Location}}</p> -->
 		<form action="/" method="GET" class="form" id="location_form"
 			style="display: inline-block; margin-left: 5px; margin-bottom: 0px">
-			<input type="submit" style="position: absolute;
+			<input type="submit" id="save_btn" style="position: absolute;
                      left: -9999px; width: 1px; height: 1px;" tabindex="-1" />
 			<select name="lang" id="select_lang">
 				<option value="en-US" default>🇺🇸</option>
@@ -23,7 +23,7 @@
 		<span>🏠</span>
 		<input type="text" name="location" id="location_input" value="{{.Location}}" 
 			autocomplete=off
-			style="margin: 0px; padding-left: 2px;
+			style="margin: 0px; padding: 0px 0px 0px 2px;
 				border-radius:0px; border: solid; border-width: 0px 0px 1px 0px; 
 				border-color:beige; background:transparent; color:beige">
 
@@ -141,25 +141,25 @@
 			wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
 			weatherInput.placeholder = weatherInputDict[prefix]
 
-//			document.getElementById("save_btn").onclick = function () {
-//				var date = new Date(Date.now())
-//				date.setFullYear(date.getFullYear()+1)
-//				var inputLocation = document.getElementById("location_input")	
-//				if (inputLocation.value != ""){
-//					place = encodeURIComponent(inputLocation.value)
-//					document.cookie = "place="+encodeURI(inputLocation.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
-//					var weatherImg = document.getElementById("weather-img")
-//					var formatSelect = document.getElementById("select_lang")
-//					var prefix = formatSelect.value.split("-")[0]
-//					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
-//
-//					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
-//					var wttrLink = document.getElementById("wttr-link")
-//					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
-//					weatherInput.placeholder = weatherInputDict[prefix]
-//				}
-//				
-//			}
+			document.getElementById("save_btn").onclick = function () {
+				var date = new Date(Date.now())
+				date.setFullYear(date.getFullYear()+1)
+				var inputLocation = document.getElementById("location_input")	
+				if (inputLocation.value != ""){
+					place = encodeURIComponent(inputLocation.value)
+					document.cookie = "place="+encodeURI(inputLocation.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
+					var weatherImg = document.getElementById("weather-img")
+					var formatSelect = document.getElementById("select_lang")
+					var prefix = formatSelect.value.split("-")[0]
+					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background=893531_lang="+prefix+".png"
+
+					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
+					var wttrLink = document.getElementById("wttr-link")
+					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+					weatherInput.placeholder = weatherInputDict[prefix]
+				}
+				
+			}
 			var formatSelect = document.getElementById("select_lang")
 			var dayForecast = new Date(Date.now()) 
 			dayForecast.setDate(dayForecast.getDate()+1)
